force-app/main/default/objects/Paciente__c/fields/Cidade__c.field-meta.xml
<CustomField>
    <fullName>Cidade__c</fullName>
    <label>Cidade/estado</label>
    <length>80</length>
    <type>Text</type>
</CustomField>