force-app/main/default/objects/Paciente__c/fields/Conv_nio__c.field-meta.xml
<CustomField>
    <fullName>Conv_nio__c</fullName>
    <label>Convênio</label>
    <length>100</length>
    <type>Text</type>
</CustomField>