force-app/main/default/objects/Paciente__c/fields/Data_de_nascimento__c.field-meta.xml
<CustomField>
    <fullName>Data_de_nascimento__c</fullName>
    <label>Data de nascimento</label>
    <required>true</required>
    <type>Date</type>
</CustomField>