force-app/main/default/objects/Paciente__c/fields/Endere_o__c.field-meta.xml
<CustomField>
    <fullName>Endere_o__c</fullName>
    <label>Endereço</label>
    <type>TextArea</type>
</CustomField>