force-app/main/default/objects/Paciente__c/fields/N_mero_da_carteirinha__c.field-meta.xml
<CustomField>
    <fullName>N_mero_da_carteirinha__c</fullName>
    <label>Número da carteirinha</label>
    <length>80</length>
    <type>Text</type>
</CustomField>