force-app/main/default/objects/Paciente__c/fields/Observa_es_cl_nicas__c.field-meta.xml
<CustomField>
    <fullName>Observa_es_cl_nicas__c</fullName>
    <label>Observações clínicas</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>