force-app/main/default/objects/Paciente__c/fields/Telefone__c.field-meta.xml
<CustomField>
    <fullName>Telefone__c</fullName>
    <label>:  Telefone</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>